--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -507,7 +507,7 @@ section,
 .section {
   color: var(--default-color);
   background-color: var(--background-color);
-  padding: 60px 0;
+  padding: 60px 25px;
   overflow: clip;
 }
 
